# faststochtree

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md
.github/workflows/: ci.yml
R/: cpp11.R  faststochtree.R
bench/: bench_bartz.ipynb  bench_r_packages.R  bench_r_packages_gfr.R  bench_stochtree_r.R  main.cpp  plot_results.py  run_rmse_experiment.sh  run_suite.sh  run_suite_mc.sh  show_results.sh  stochtree_compare.cpp  summarize_r_comparison.R
include/faststochtree/: gfr.hpp  mcmc.hpp  model.hpp  quantize.hpp  rng.hpp  sampler.hpp  thread_pool.hpp  tree.hpp
python/: pyproject.toml
python/src/faststochtree/: __init__.py  _bindings.cpp
r/: .gitignore  DESCRIPTION  configure  configure.win
r/src/: Makevars  Makevars.win  bindings.cpp  cpp11.cpp  gfr.cpp  mcmc.cpp  sampler.cpp
scripts/Python/: regression_debug.py  regression_demo.py
scripts/R/: regression_debug.R  regression_demo.R
src/: Makevars  Makevars.win  bindings.cpp  faststochtree_types.h  gfr.cpp  mcmc.cpp  quantize.cpp  sampler.cpp
tests/: test_bart.cpp  test_tree.cpp
